# my-pretrain

./: .gitignore  README.md  generate.py  lora_generate.py  lora_train.py  main.py  pyproject.toml  train.py
aozora_pre/: .gitignore  generate.py  train.py
