[project]
name = "my-pretrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "pytorch-triton-rocm>=3.3.0",
  "transformers>=4.56.2",
  "datasets>=4.1.1",
  "accelerate>=1.10.1",
  "huggingface-hub>=0.35.1",
  "sentencepiece>=0.2.1",
  "fugashi>=1.5.1",
  "ipadic>=1.0.0",
  "peft>=0.17.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm" },
]
torchvision = [
  { index = "pytorch-rocm" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.35.1",
]
